updated character information and client
updated character  data to include the pictures for their correspoinding characters

updated the style to style the container

updated the logo for the website

--- a/client/style.css
+++ b/client/style.css
@@ -83,7 +83,7 @@ main {
 .top-container {
   background-repeat: no-repeat;
   background-size: cover;
-  background-position: right center;
+  background-position: 93.5% center;
   height: 250px;
 }
 
