--- a/client/style.css
+++ b/client/style.css
@@ -13,7 +13,7 @@
     flex: auto;
     justify-content: space-around;
     align-items: center;
-    background: linear-gradient(90deg, lightblue 0%, transparent 100%);
+    background: linear-gradient(90deg, rgb(173, 200, 230) 0%, transparent 100%);
   }
 
 .header-left {
@@ -43,8 +43,13 @@
     float: right;
 }
 .header-right button {
-  background-color: white;
+  background-color: rgb(123, 147, 255);
   border: none;
+  border-radius: 4px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
+  font-size: 16px;
+  font-weight: 600;
   
   color:  rgb(0, 0, 0);
   cursor: pointer;
@@ -127,23 +132,41 @@ body.character-page {
 
 /* 404 Page CSS */
 .fof-container{
-    display: table;
-    width: 100%;
-    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    min-height: 100dvh;
+    background-image: url("https://www.marvelrivals.com/pc/gw/20241128194803/img/11_d1857620.jpg");
+    background-size: cover;
+    background-position: center top;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+  
     text-align: center;
-    color: black;
+    color: rgb(255, 255, 255);
 }
 .fof {
-    display: table-cell;
+    display: flex;
+    flex-direction: column;
     vertical-align: middle;
 }
 .fof h1 {
-    color:rgb(26, 25, 25);
+    color:rgb(255, 255, 255);
     font-size: 50px;
     display: inline-block;
     padding-right: 12px;
     animation: type .6s alternate infinite;
 }
+.fof a {
+    color: rgb(245, 245, 245);
+    background-color: rgb(90, 138, 228);
+    border-radius: 4px;
+    text-decoration: none;
+    font-size: 20px;
+}
+
 @keyframes type {
     from {box-shadow: inset -3px 0px 0px #888;}
     to {box-shadow: inset -3px 0px 0px transparent;}
